# common_algorithm

./: CMakeLists.txt  readme.md
c/: filter_algorithm.c  filter_algorithm.h  pid_algorithm.c  pid_algorithm.h  wave_generator.c  wave_generator.h
c++/imuDatafusion/: imuData.cpp  imuData.h
filter/: lpf.cpp  lpf.h
imuDatafusion/: CMakeLists.txt  imuData.cpp  imuData.h  readme.md
imuDatafusion/example/: CMakeLists.txt  main.cpp
imuDatafusion/src/: imuDatafusion.cpp  imuDatafusion.h
kalman/: CMakeLists.txt  readme.md
kalman/example/: CMakeLists.txt  main.cpp
kalman/src/: kalman.cpp  kalman.h
least_square/: readme.md
least_square/python/: example.py
lpf/: CMakeLists.txt  readme.md
lpf/example/: CMakeLists.txt  main.cpp
medianFilter/: CMakeLists.txt  readme.md
medianFilter/example/: CMakeLists.txt  main.c
medianFilter/src/: median_filter.c  median_filter.h
python/: color_detect.py
